pkg/lang/testdata/ub/config/invalid/encryption-unknown-meta-key.ub
encryption: { @key-source: env-key, @bogus: 1 }
